# race_coach

./: .coderabbit.yaml  .gitattributes  .gitignore  Makefile  README.md  VERSIONS  analysis_options.yaml  buf.gen.ci.yaml  buf.gen.yaml  buf.yaml  build.yaml  flutter_rust_bridge.yaml  lefthook.yml  pubspec.yaml
.github/workflows/: flutter.yml  proto.yml  rust.yml
android/app/: build.gradle.kts
docs/: ml-integration.md
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  firebase_options.ci.dart  main.dart
lib/core/permissions/: permission_service.dart
lib/core/router/: app_router.dart
lib/core/theme/: app_colors.dart  app_theme.dart
lib/core/utils/: logger.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  types.dart
proto/racecoach/v1/: session.proto  (+3 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  registry.rs  types.rs
rust/src/api/: coaching_api.rs  mod.rs
rust/src/braking/: corner_speed.rs  g_onset.rs  mod.rs
rust/src/calibration/: imu_bias.rs  mod.rs
rust/src/coaching/: cue_engine.rs  mod.rs  priority.rs
rust/src/distance/: mod.rs  speed_integrated.rs
rust/src/dynamics/: friction_circle.rs  jerk.rs  mod.rs  trail_braking.rs
rust/src/math/: filters.rs  haversine.rs  line_segment.rs  mod.rs
rust/src/ml/: features.rs  mod.rs
rust/src/reference/: mod.rs  reference_lap.rs
rust/src/timing/: delta_t.rs  mod.rs  sector_timer.rs
rust/tests/: integration_test.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_race_coach.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_race_coach.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
(+87 files in other folders)
