[package]
name = "race_coach_core"
version = "0.1.0"
edition = "2021"
description = "Race coaching analysis engine — telemetry processing, braking detection, friction circle, delta-T"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
